--- a/Recommendation System.ipynb
+++ b/Recommendation System.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nitin\\AppData\\Local\\Temp\\ipykernel_4344\\4144055263.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\nitin\\AppData\\Local\\Temp\\ipykernel_17424\\4144055263.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  books = pd.read_csv(r\"data/Books.csv\")\n"
      ]
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b27bea56",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,7 +2356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
