popularity based system done

--- a/Recommendation System.ipynb
+++ b/Recommendation System.ipynb
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "baf65940",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
        "[241071 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "id": "a5a6152b",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "4   Harry Potter and the Chamber of Secrets (Book 2)         556     5.183453"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,23 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1147d446",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec3614b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "2d31c4fd",
    "metadata": {},
    "outputs": [],
@@ -938,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "77bf94d0",
    "metadata": {},
    "outputs": [
@@ -966,20 +950,13 @@
        "      <th>Book-Title</th>\n",
        "      <th>no_ratings</th>\n",
        "      <th>Book-Rating</th>\n",
-       "      <th>ISBN_x</th>\n",
-       "      <th>Book-Author_x</th>\n",
-       "      <th>Year-Of-Publication_x</th>\n",
-       "      <th>Publisher_x</th>\n",
-       "      <th>Image-URL-S_x</th>\n",
-       "      <th>Image-URL-M_x</th>\n",
-       "      <th>Image-URL-L_x</th>\n",
-       "      <th>ISBN_y</th>\n",
-       "      <th>Book-Author_y</th>\n",
-       "      <th>Year-Of-Publication_y</th>\n",
-       "      <th>Publisher_y</th>\n",
-       "      <th>Image-URL-S_y</th>\n",
-       "      <th>Image-URL-M_y</th>\n",
-       "      <th>Image-URL-L_y</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Author</th>\n",
+       "      <th>Year-Of-Publication</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Image-URL-S</th>\n",
+       "      <th>Image-URL-M</th>\n",
+       "      <th>Image-URL-L</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -988,13 +965,6 @@
        "      <td>Harry Potter and the Prisoner of Azkaban (Book 3)</td>\n",
        "      <td>428</td>\n",
        "      <td>5.852804</td>\n",
-       "      <td>0439136350</td>\n",
-       "      <td>J. K. Rowling</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Scholastic</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439136350.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439136350.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439136350.0...</td>\n",
        "      <td>0439136350</td>\n",
        "      <td>J. K. Rowling</td>\n",
        "      <td>1999</td>\n",
@@ -1015,26 +985,12 @@
        "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
        "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
        "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
-       "      <td>0439139597</td>\n",
-       "      <td>J. K. Rowling</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>Scholastic</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439139597.0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Harry Potter and the Sorcerer's Stone (Book 1)</td>\n",
        "      <td>278</td>\n",
        "      <td>5.737410</td>\n",
-       "      <td>0590353403</td>\n",
-       "      <td>J. K. Rowling</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>Scholastic</td>\n",
-       "      <td>http://images.amazon.com/images/P/0590353403.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0590353403.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0590353403.0...</td>\n",
        "      <td>0590353403</td>\n",
        "      <td>J. K. Rowling</td>\n",
        "      <td>1998</td>\n",
@@ -1055,26 +1011,12 @@
        "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
        "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
        "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
-       "      <td>043935806X</td>\n",
-       "      <td>J. K. Rowling</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>Scholastic</td>\n",
-       "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/043935806X.0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Harry Potter and the Chamber of Secrets (Book 2)</td>\n",
        "      <td>556</td>\n",
        "      <td>5.183453</td>\n",
-       "      <td>0439064872</td>\n",
-       "      <td>J. K. Rowling</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>Scholastic</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439064872.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439064872.0...</td>\n",
-       "      <td>http://images.amazon.com/images/P/0439064872.0...</td>\n",
        "      <td>0439064872</td>\n",
        "      <td>J. K. Rowling</td>\n",
        "      <td>2000</td>\n",
@@ -1095,56 +1037,28 @@
        "9   Harry Potter and the Order of the Phoenix (Boo...         347   \n",
        "13   Harry Potter and the Chamber of Secrets (Book 2)         556   \n",
        "\n",
-       "    Book-Rating      ISBN_x  Book-Author_x Year-Of-Publication_x Publisher_x  \\\n",
-       "0      5.852804  0439136350  J. K. Rowling                  1999  Scholastic   \n",
-       "3      5.824289  0439139597  J. K. Rowling                  2000  Scholastic   \n",
-       "5      5.737410  0590353403  J. K. Rowling                  1998  Scholastic   \n",
-       "9      5.501441  043935806X  J. K. Rowling                  2003  Scholastic   \n",
-       "13     5.183453  0439064872  J. K. Rowling                  2000  Scholastic   \n",
+       "    Book-Rating        ISBN    Book-Author Year-Of-Publication   Publisher  \\\n",
+       "0      5.852804  0439136350  J. K. Rowling                1999  Scholastic   \n",
+       "3      5.824289  0439139597  J. K. Rowling                2000  Scholastic   \n",
+       "5      5.737410  0590353403  J. K. Rowling                1998  Scholastic   \n",
+       "9      5.501441  043935806X  J. K. Rowling                2003  Scholastic   \n",
+       "13     5.183453  0439064872  J. K. Rowling                2000  Scholastic   \n",
        "\n",
-       "                                        Image-URL-S_x  \\\n",
+       "                                          Image-URL-S  \\\n",
        "0   http://images.amazon.com/images/P/0439136350.0...   \n",
        "3   http://images.amazon.com/images/P/0439139597.0...   \n",
        "5   http://images.amazon.com/images/P/0590353403.0...   \n",
        "9   http://images.amazon.com/images/P/043935806X.0...   \n",
        "13  http://images.amazon.com/images/P/0439064872.0...   \n",
        "\n",
-       "                                        Image-URL-M_x  \\\n",
+       "                                          Image-URL-M  \\\n",
        "0   http://images.amazon.com/images/P/0439136350.0...   \n",
        "3   http://images.amazon.com/images/P/0439139597.0...   \n",
        "5   http://images.amazon.com/images/P/0590353403.0...   \n",
        "9   http://images.amazon.com/images/P/043935806X.0...   \n",
        "13  http://images.amazon.com/images/P/0439064872.0...   \n",
        "\n",
-       "                                        Image-URL-L_x      ISBN_y  \\\n",
-       "0   http://images.amazon.com/images/P/0439136350.0...  0439136350   \n",
-       "3   http://images.amazon.com/images/P/0439139597.0...  0439139597   \n",
-       "5   http://images.amazon.com/images/P/0590353403.0...  0590353403   \n",
-       "9   http://images.amazon.com/images/P/043935806X.0...  043935806X   \n",
-       "13  http://images.amazon.com/images/P/0439064872.0...  0439064872   \n",
-       "\n",
-       "    Book-Author_y Year-Of-Publication_y Publisher_y  \\\n",
-       "0   J. K. Rowling                  1999  Scholastic   \n",
-       "3   J. K. Rowling                  2000  Scholastic   \n",
-       "5   J. K. Rowling                  1998  Scholastic   \n",
-       "9   J. K. Rowling                  2003  Scholastic   \n",
-       "13  J. K. Rowling                  2000  Scholastic   \n",
-       "\n",
-       "                                        Image-URL-S_y  \\\n",
-       "0   http://images.amazon.com/images/P/0439136350.0...   \n",
-       "3   http://images.amazon.com/images/P/0439139597.0...   \n",
-       "5   http://images.amazon.com/images/P/0590353403.0...   \n",
-       "9   http://images.amazon.com/images/P/043935806X.0...   \n",
-       "13  http://images.amazon.com/images/P/0439064872.0...   \n",
-       "\n",
-       "                                        Image-URL-M_y  \\\n",
-       "0   http://images.amazon.com/images/P/0439136350.0...   \n",
-       "3   http://images.amazon.com/images/P/0439139597.0...   \n",
-       "5   http://images.amazon.com/images/P/0590353403.0...   \n",
-       "9   http://images.amazon.com/images/P/043935806X.0...   \n",
-       "13  http://images.amazon.com/images/P/0439064872.0...   \n",
-       "\n",
-       "                                        Image-URL-L_y  \n",
+       "                                          Image-URL-L  \n",
        "0   http://images.amazon.com/images/P/0439136350.0...  \n",
        "3   http://images.amazon.com/images/P/0439139597.0...  \n",
        "5   http://images.amazon.com/images/P/0590353403.0...  \n",
@@ -1152,7 +1066,7 @@
        "13  http://images.amazon.com/images/P/0439064872.0...  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "id": "307981be",
    "metadata": {},
    "outputs": [
@@ -1173,13 +1087,13 @@
        "(50, 5)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_50 = top_50[['Book-Title','Book-Author_x','Book-Rating','Image-URL-M_x','no_ratings']]\n",
+    "top_50 = top_50[['Book-Title','Book-Author','Book-Rating','Image-URL-M','no_ratings']]\n",
     "top_50.shape"
    ]
   },
