Bug fixing in Recommend function

--- a/Recommendation System.ipynb
+++ b/Recommendation System.ipynb
@@ -2154,17 +2154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "6a6804d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def recommend(book_name):\n",
+    "    # index fetch\n",
     "    index = np.where(pt.index==book_name)[0][0]\n",
-    "    similar_items = sorted(list(enumerate(similarity_score[index])),key=lambda x:x[1], reverse=True)[1:6]\n",
+    "    similar_items = sorted(list(enumerate(similarity_scores[index])),key=lambda x:x[1],reverse=True)[1:5]\n",
     "    \n",
+    "    data = []\n",
     "    for i in similar_items:\n",
-    "        print(f\"{pt.index[i[0]]} --> Similarity score: {round(i[1]*100,2)}%\")"
+    "        item = []\n",
+    "        temp_df = books[books['Book-Title'] == pt.index[i[0]]]\n",
+    "        item.extend(list(temp_df.drop_duplicates('Book-Title')['Book-Title'].values))\n",
+    "        item.extend(list(temp_df.drop_duplicates('Book-Title')['Book-Author'].values))\n",
+    "        item.extend(list(temp_df.drop_duplicates('Book-Title')['Image-URL-M'].values))\n",
+    "        \n",
+    "        data.append(item)\n",
+    "    \n",
+    "    return data"
    ]
   },
   {
