--- a/Recommendation System.ipynb
+++ b/Recommendation System.ipynb
@@ -2255,8 +2255,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "de6e43f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(top_50,open('popular.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b036ee9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Title</th>\n",
+       "      <th>Book-Author</th>\n",
+       "      <th>Year-Of-Publication</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Image-URL-S</th>\n",
+       "      <th>Image-URL-M</th>\n",
+       "      <th>Image-URL-L</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0195153448</td>\n",
+       "      <td>Classical Mythology</td>\n",
+       "      <td>Mark P. O. Morford</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>Clara Callan</td>\n",
+       "      <td>Richard Bruce Wright</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>HarperFlamingo Canada</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0060973129</td>\n",
+       "      <td>Decision in Normandy</td>\n",
+       "      <td>Carlo D'Este</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>HarperPerennial</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0374157065</td>\n",
+       "      <td>Flu: The Story of the Great Influenza Pandemic...</td>\n",
+       "      <td>Gina Bari Kolata</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Farrar Straus Giroux</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0393045218</td>\n",
+       "      <td>The Mummies of Urumchi</td>\n",
+       "      <td>E. J. W. Barber</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>W. W. Norton &amp;amp; Company</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271354</th>\n",
+       "      <td>0449906736</td>\n",
+       "      <td>Flashpoints: Promise and Peril in a New World</td>\n",
+       "      <td>Robin Wright</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>Ballantine Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/0449906736.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0449906736.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0449906736.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271356</th>\n",
+       "      <td>0525447644</td>\n",
+       "      <td>From One to One Hundred</td>\n",
+       "      <td>Teri Sloat</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Dutton Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271357</th>\n",
+       "      <td>006008667X</td>\n",
+       "      <td>Lily Dale : The True Story of the Town that Ta...</td>\n",
+       "      <td>Christine Wicker</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>HarperSanFrancisco</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271358</th>\n",
+       "      <td>0192126040</td>\n",
+       "      <td>Republic (World's Classics)</td>\n",
+       "      <td>Plato</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271359</th>\n",
+       "      <td>0767409752</td>\n",
+       "      <td>A Guided Tour of Rene Descartes' Meditations o...</td>\n",
+       "      <td>Christopher  Biffle</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>McGraw-Hill Humanities/Social Sciences/Languages</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>242135 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ISBN                                         Book-Title  \\\n",
+       "0       0195153448                                Classical Mythology   \n",
+       "1       0002005018                                       Clara Callan   \n",
+       "2       0060973129                               Decision in Normandy   \n",
+       "3       0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
+       "4       0393045218                             The Mummies of Urumchi   \n",
+       "...            ...                                                ...   \n",
+       "271354  0449906736      Flashpoints: Promise and Peril in a New World   \n",
+       "271356  0525447644                            From One to One Hundred   \n",
+       "271357  006008667X  Lily Dale : The True Story of the Town that Ta...   \n",
+       "271358  0192126040                        Republic (World's Classics)   \n",
+       "271359  0767409752  A Guided Tour of Rene Descartes' Meditations o...   \n",
+       "\n",
+       "                 Book-Author Year-Of-Publication  \\\n",
+       "0         Mark P. O. Morford                2002   \n",
+       "1       Richard Bruce Wright                2001   \n",
+       "2               Carlo D'Este                1991   \n",
+       "3           Gina Bari Kolata                1999   \n",
+       "4            E. J. W. Barber                1999   \n",
+       "...                      ...                 ...   \n",
+       "271354          Robin Wright                1993   \n",
+       "271356            Teri Sloat                1991   \n",
+       "271357      Christine Wicker                2004   \n",
+       "271358                 Plato                1996   \n",
+       "271359   Christopher  Biffle                2000   \n",
+       "\n",
+       "                                               Publisher  \\\n",
+       "0                                Oxford University Press   \n",
+       "1                                  HarperFlamingo Canada   \n",
+       "2                                        HarperPerennial   \n",
+       "3                                   Farrar Straus Giroux   \n",
+       "4                             W. W. Norton &amp; Company   \n",
+       "...                                                  ...   \n",
+       "271354                                  Ballantine Books   \n",
+       "271356                                      Dutton Books   \n",
+       "271357                                HarperSanFrancisco   \n",
+       "271358                           Oxford University Press   \n",
+       "271359  McGraw-Hill Humanities/Social Sciences/Languages   \n",
+       "\n",
+       "                                              Image-URL-S  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271354  http://images.amazon.com/images/P/0449906736.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-M  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271354  http://images.amazon.com/images/P/0449906736.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-L  \n",
+       "0       http://images.amazon.com/images/P/0195153448.0...  \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...  \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...  \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...  \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...  \n",
+       "...                                                   ...  \n",
+       "271354  http://images.amazon.com/images/P/0449906736.0...  \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...  \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...  \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...  \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...  \n",
+       "\n",
+       "[242135 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books.drop_duplicates('Book-Title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "974b8679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(pt,open('pt.pkl','wb'))\n",
+    "pickle.dump(books,open('books.pkl','wb'))\n",
+    "pickle.dump(similarity_score,open('similarity_scores.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05ade20e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2264,7 +2542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b036ee9b",
+   "id": "fa18b161",
    "metadata": {},
    "outputs": [],
    "source": []
