App completed with minor changes

--- a/Recommendation System.ipynb
+++ b/Recommendation System.ipynb
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "6a6804d6",
    "metadata": {},
    "outputs": [],
@@ -2162,7 +2162,7 @@
     "def recommend(book_name):\n",
     "    # index fetch\n",
     "    index = np.where(pt.index==book_name)[0][0]\n",
-    "    similar_items = sorted(list(enumerate(similarity_scores[index])),key=lambda x:x[1],reverse=True)[1:5]\n",
+    "    similar_items = sorted(list(enumerate(similarity_score[index])),key=lambda x:x[1],reverse=True)[1:5]\n",
     "    \n",
     "    data = []\n",
     "    for i in similar_items:\n",
